[project]
name = "smart-notification-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "crewai[tools]>=0.177.0",
    "crewai-tools>=0.69.0",
    "fastapi>=0.116.1",
    "feedparser>=6.0.11",
    "firecrawl-py>=4.3.6",
    "openai>=1.106.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "firebase-admin==6.5.0",
    "apscheduler>=3.11.0",
    "pytz>=2025.2",
]
